Move projet items into <details> tags

--- a/index.html
+++ b/index.html
@@ -38,12 +38,28 @@
             </div>            
         </section>    
         <section id="projects">
-            <div class="projects_container">
-                <h2>Projects</h2>
+            <h2>Projects</h2>
+            <details class="project">                
+                <h3>Elevator Analysis</h3>
+                <img src="./images/Elev5.jpg" alt="Screen shot of Elevator Analysis. Building data and zones on the left. Current zone values in the middle. Current zone calculations on the right">
+                <p>Elevator analysis for buildings. Calculate how many elevators, how the elevators are grouped, where the elevators stop, and elevtor speed and size. Runs in Windows, written in Visual Basic.</p>
+            </details>
+            <details>
+                <h3>Project/Client/Billing System</h3>
+                <img src="./images/PCDB.jpg" alt="Screen shot of list of clients, with one client highlighted. Also shows Address, Jobs, Projects, Contacts and notes for highlighted client">
+                <p>Tracks all Clients, Contacts, Jobs (billable services), and Projects. Also does all billing for all jobs, and tracks payment of invoices. Runs is Windows, written in Visual Basic, uses Access Database and SQL.</p>
+            </details>            
+            <details>
+                <h3>Touch Screen Kiosk</h3>
+                <img src="./images/BET.jpg" alt="Screent shot of list of bowling ball companies with videos to be played. Opaque image of Pro Shop's loco can be seen in the background">
+                <p>Plays bowling ball videos, showing ball motions and target lane condistions. Runs on Rasberry PI. Written in HTML, CSS, JavaScript, Visual Basic</p>
+            </details>
+            <div class="projects_container">                
+                
                 <ul id="projects_list">
                     <li><a href="">Elevator Analysis</a></li>
                     <li><a href="">Project/Client/Billing System</a></li>
-                    <li><a href="">Touch Sreen Kiosk</a></li>
+                    <li><a href=""></a></li>
                 </ul>
             </div>
         </section>
