--- a/index.html
+++ b/index.html
@@ -59,23 +59,26 @@
             <div class="skills_certs_container">
                 <div class="skills_container">
                     <h2>Skills</h2>
-                    <ul>
+                    <div class="skillbox cplusplus">
+                        <img src="./images/c++.png" alt="c++">
+                    </div>
+                    <!-- <ul>
                         <li>C++</li>  
                         <li>Visual Basic</li>
                         <li>VBA</li>
                         <li>SQL</li>
                         <li>Excel</li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="certs_container">
                     <h2>Certificates</h2>
-                    <ul>
+                    <!-- <ul>
                         <li>Python</li>
                         <li>JavaScript</li>
                         <li>git</li>
                         <li>css</li>
                         <li>html</li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </section>
