skills and certs working

--- a/index.html
+++ b/index.html
@@ -56,29 +56,47 @@
             </details>
         </section>
         <section id="skills_certs">
-            <div class="skills_certs_container">
-                <div class="skills_container">
-                    <h2>Skills</h2>
-                    <div class="skillbox cplusplus">
-                        <img src="./images/c++.png" alt="c++">
+            <div class="skills">                
+                <h2>Skills</h2>                    
+                    <div class="skills_certs_container">
+                        <div class="skillbox cplusplus">
+                            <img src="./images/c++.png" alt="c++">
+                        </div>
+                        <div class="skillbox vb">
+                            <img src="./images/visual_basic.png" alt="Visual Basic">
+                        </div>
+                        <div class="skillbox vba">
+                            <img src="./images/vba.png" alt="Visual Basic for Applications">
+                        </div>
+                        <div class="skillbox sql">
+                            <img src="./images/sql.png" alt="SQL">
+                        </div>
+                        <div class="skillbox wix">
+                            <img src="./images/wix.png" alt="WiX Toolset">
+                        </div>
+                        <div class="skillbox excel">
+                            <img src="./images/excel.png" alt="Excel">
+                        </div>
                     </div>
-                    <!-- <ul>
-                        <li>C++</li>  
-                        <li>Visual Basic</li>
-                        <li>VBA</li>
-                        <li>SQL</li>
-                        <li>Excel</li>
-                    </ul> -->
                 </div>
-                <div class="certs_container">
-                    <h2>Certificates</h2>
-                    <!-- <ul>
-                        <li>Python</li>
-                        <li>JavaScript</li>
-                        <li>git</li>
-                        <li>css</li>
-                        <li>html</li>
-                    </ul> -->
+                <h2>Certificates</h2>                    
+                    <div class="skills_certs_container">
+                        <div class="skillbox cplusplus">
+                            <img src="./images/c++.png" alt="c++">
+                        </div>
+                        <div class="skillbox python">
+                            <img src="./images/python.png" alt="Python 3">
+                        </div>
+                        <div class="skillbox html">
+                            <img src="./images/html.png" alt="HTML 5">
+                        </div>
+                        <div class="skillbox java_script">
+                            <img src="./images/js.png" alt="JavaScript">
+                        </div>
+                        <div class="skillbox sql">
+                            <img src="./images/sql.png" alt="SQL">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
