--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bowlers Experience Too</title>
+    <title>Eric Adolphson Portfolio</title>
 
     <!-- for fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,8 +17,9 @@
     <script src="./bootstrap/bootstrap-4.5.0.min.js"></script>
 
     <!-- internal links -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">    
     <script src="script.js"></script>    
+   
 </head>
 <body>
     <nav>
@@ -37,7 +38,9 @@
                     <h2>About Me</h2>
                     <p>Hello. I am Eric Adolphson. I have been coding for 35 years. I got my start after taking a beginning programming class at UC Berkeley in my junior year. I then wrote an app (we called them programs back then) at my summer-time job. They people there liked my app, and I liked writing it.</p>
                     <p>After Cal I took an assembly language and a data structures course at a local Junior College and have been coding ever since. I am self-employed and have written apps for fortune 500 companies as well as small local businesses.</p>
-                    <p>Other activities include <a href="#bowlingModal" data-toggle="modal">bowling</a> and <a href="#goldModal" data-toggle="modal">golf</a>. I did a short stint on the Professional Bowler’s Association (PBA) National Tour. I won the 1992 Seattle Open. You can watch the title match <a href="https://www.youtube.com/watch?v=JITAlD9L0e8">here</a>. After a 15-year hiatus due to a bad right shoulder, I have started competitive bowling again.</p>
+                    <!-- href="#nameModal" points to the id of the parent modal div 
+                        data-toggle="modal" opens the modal window -->
+                    <p>Other activities include <a href="#bowlingModal" data-toggle="modal">bowling</a> and <a href="#golfModal" data-toggle="modal">golf</a>. I did a short stint on the Professional Bowler’s Association (PBA) National Tour. I won the 1992 Seattle Open. You can watch the title match <a href="https://www.youtube.com/watch?v=JITAlD9L0e8">here</a>. After a 20-year hiatus due to a bad right shoulder, I have started competitive bowling again.</p>
                 </div>
                 <div class="about_me_img_container">
                     <img src="./images/BowlingSeattle92.jpg" alt="Photo of Eric Adolphson" class="my_photo">
@@ -107,20 +110,44 @@
                 </div>
             </div>
         </section>
-
+    
+        <!-- popup modal video  -->
         <div class="popup_video">
-            <!-- bowling video  -->
-            <div id="bowlingModal" class="modal fade"></div>
+
+            <!-- bowling video and comments for popup modal video  -->
+
+            <!-- id=nameModal must be the same as the href= in <a> tag. Also nameModal must match #nameModal in javaScript used to stop video when modal closes 
+                .modal class identifies the content of <div> as a modal and brings focus to it. 
+                .fade class adds a transition effect which fades the modal in and out. Remove this class if you do not want this effect. 
+                add attribute role="dialog" improves accessibility for people using screen readers. 
+                <div id="nameModal" class="modal fade" role="dialog"> -->
+            <div id="bowlingModal" class="modal fade">
+                <!-- .modal-dialog class is used to set the proper width and margin of the modal. -->
                 <div class="modal-dialog">
+                    <!-- .modal-content class styles the modal (border, background-color, etc.). Inside this <div>, add the modal's header, body, and footer. -->
                     <div class="modal-content">
+                        <!-- .modal-header class is used to define the style for the header of the modal. -->
                         <div class="modal-header">
-                            <h5 class="modal-header">Eric Bowling</h5>
+                            <!-- .modal-title class styles the header with a proper line-height. -->
+                            <h5 class="modal-title">Eric Bowling</h5>
+                            <!-- The <button> inside the header has a data-dismiss="modal" attribute which closes the modal if you click on it. 
+                                .close class styles the close button 
+                                &times; means a multiplication sign, so an x gets displayed on the button. 
+                                  the muiltiplaction sign x looks more like the close box x than the character x -->
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
+                        <!-- .modal-body class is used to define the style for the body of the modal. Add any HTML markup here; paragraphs, images, videos, etc. -->
                         <div class="modal-body">
+                            <!-- .embed-responsive class and .embed-responsive-16by9 class are used to set the aspect ration of the video frame -->
                             <div class="embed-responsive embed-responsive-16by9">
+                                <!-- Bootstrap's iframe is an HTML document that is embedded in another HTML document on a web page. 
+                                    iframes are used to insert content from other source. 
+                                    id="nameVideo" is the id of the video. must match #nameVideo in javaScript used to stop video when modal closes 
+                                    use .embed-responsive-item class when you want to match the styling for other attributes.
+                                    src="..." is the source path for the video
+                                    add allowfullscreen to allow the user the option to view the video in full screen -->
                                 <iframe id="bowlingVideo" class="embed-responsive-item" src="./videos/Jagged_Edge.mp4" allowfullscreen></iframe>
-                            </div>    
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -131,8 +158,8 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-header">Eric Golfing</h5>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h5 class="modal-title">Eric Golfing</h5>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>                            
                         </div>
                         <div class="modal-body">
                             <div class="embed-responsive embed-responsive-16by9">
@@ -143,7 +170,6 @@
                 </div>
             </div>
         </div>
-
-    </main>
+    </main> 
 </body>
 </html>
