Added Contact Page

--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
 </head>
 <body>
     <nav>
-        <h2>Eric Adolphson</h2>
+        <div class="myName">            
+            <h2>Eric Adolphson</h2>
+        </div>        
         <ul class="ul_nav">
             <li class="li_nav"><a href="#aboutMe">About Me</a></li>
             <li class="li_nav"><a href="#projects">Projects</a></li>
             <li class="li_nav"><a href="#skills">Skills</a></li>
-            <li class="li_nav"><a href="#contact">Contact</a></li>
+            <!-- <li class="li_nav"><a href="#contact">Contact</a></li> -->
+            <li class="li_nav"><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>  
     <main>
         <section id="about_me">
             <div class="about_me_container">
                 <div class="about_me_text_container">
-                    <h2>About Me</h2>
+                    <h3>About Me</h3>
                     <p>Hello. I am Eric Adolphson. I have been coding for 35 years. I got my start after taking a beginning programming class at UC Berkeley in my junior year. I then wrote an app (we called them programs back then) at my summer-time job. They people there liked my app, and I liked writing it.</p>
                     <p>After Cal I took an assembly language and a data structures course at a local Junior College and have been coding ever since. I am self-employed and have written apps for fortune 500 companies as well as small local businesses.</p>
                     <!-- href="#nameModal" points to the id of the parent modal div 
@@ -48,7 +51,7 @@
             </div>            
         </section>    
         <section id="projects">
-            <h2>Projects</h2>
+            <h4>Projects</h4>
             <details>
                 <summary class="project_summary">Elevator Analysis</summary>                                
                 <img src="./images/Elev5.jpg" class="project_img" alt="Screen shot of Elevator Analysis. Building data and zones on the left. Current zone values in the middle. Current zone calculations on the right">
@@ -67,45 +70,45 @@
         </section>
         <section id="skills_certs">
             <div class="skills">                
-                <h2>Skills</h2>                    
-                    <div class="skills_certs_container">
-                        <div class="skillbox cplusplus">
-                            <img src="./images/c++.png" alt="c++">
-                        </div>
-                        <div class="skillbox vb">
-                            <img src="./images/visual_basic.png" alt="Visual Basic">
-                        </div>
-                        <div class="skillbox vba">
-                            <img src="./images/vba.png" alt="Visual Basic for Applications">
-                        </div>
-                        <div class="skillbox sql">
-                            <img src="./images/sql.png" alt="SQL">
-                        </div>
-                        <div class="skillbox wix">
-                            <img src="./images/wix.png" alt="WiX Toolset">
-                        </div>
-                        <div class="skillbox excel">
-                            <img src="./images/excel.png" alt="Excel">
-                        </div>
+                <h4>Skills</h4>                    
+                <div class="logo_containers">
+                    <div class="logo_box cplusplus">
+                        <img src="./images/c++.png" alt="c++">
+                    </div>
+                    <div class="logo_box vb">
+                        <img src="./images/visual_basic.png" alt="Visual Basic">
+                    </div>
+                    <div class="logo_box vba">
+                        <img src="./images/vba.png" alt="Visual Basic for Applications">
+                    </div>
+                    <div class="logo_box sql">
+                        <img src="./images/sql.png" alt="SQL">
+                    </div>
+                    <div class="logo_box wix">
+                        <img src="./images/wix.png" alt="WiX Toolset">
+                    </div>
+                    <div class="logo_box excel">
+                        <img src="./images/excel.png" alt="Excel">
                     </div>
                 </div>
-                <h2>Certificates</h2>                    
-                    <div class="skills_certs_container">
-                        <div class="skillbox cplusplus">
-                            <img src="./images/c++.png" alt="c++">
-                        </div>
-                        <div class="skillbox python">
-                            <img src="./images/python.png" alt="Python 3">
-                        </div>
-                        <div class="skillbox html">
-                            <img src="./images/html.png" alt="HTML 5">
-                        </div>
-                        <div class="skillbox java_script">
-                            <img src="./images/js.png" alt="JavaScript">
-                        </div>
-                        <div class="skillbox sql">
-                            <img src="./images/sql.png" alt="SQL">
-                        </div>
+            </div>
+            <div class="certs">
+                <h4>Certificates</h4>                    
+                <div class="logo_containers">
+                    <div class="logo_box cplusplus">
+                        <img src="./images/c++.png" alt="c++">
+                    </div>
+                    <div class="logo_box python">
+                        <img src="./images/python.png" alt="Python 3">
+                    </div>
+                    <div class="logo_box html">
+                        <img src="./images/html.png" alt="HTML 5">
+                    </div>
+                    <div class="logo_box java_script">
+                        <img src="./images/js.png" alt="JavaScript">
+                    </div>
+                    <div class="logo_box sql">
+                        <img src="./images/sql.png" alt="SQL">
                     </div>
                 </div>
             </div>
