--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 <body>
     <nav>
         <div class="myName">            
-            <h2>Eric Adolphson</h2>
+            <h2 class="myNameH2">Eric Adolphson</h2>
         </div>        
         <ul class="ul_nav">
             <li class="li_nav"><a href="#aboutMe">About Me</a></li>
             <li class="li_nav"><a href="#projects">Projects</a></li>
-            <li class="li_nav"><a href="#skills">Skills</a></li>
-            <!-- <li class="li_nav"><a href="#contact">Contact</a></li> -->
+            <li class="li_nav"><a href="#skills">Skills</a></li>            
             <li class="li_nav"><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>  
@@ -38,7 +37,7 @@
         <section id="about_me">
             <div class="about_me_container">
                 <div class="about_me_text_container">
-                    <h3>About Me</h3>
+                    <h4>About Me</h4>
                     <p>Hello. I am Eric Adolphson. I have been coding for 35 years. I got my start after taking a beginning programming class at UC Berkeley in my junior year. I then wrote an app (we called them programs back then) at my summer-time job. They people there liked my app, and I liked writing it.</p>
                     <p>After Cal I took an assembly language and a data structures course at a local Junior College and have been coding ever since. I am self-employed and have written apps for fortune 500 companies as well as small local businesses.</p>
                     <!-- href="#nameModal" points to the id of the parent modal div 
@@ -51,7 +50,7 @@
             </div>            
         </section>    
         <section id="projects">
-            <h4>Projects</h4>
+            <h4 id="test">Projects</h4>
             <details>
                 <summary class="project_summary">Elevator Analysis</summary>                                
                 <img src="./images/Elev5.jpg" class="project_img" alt="Screen shot of Elevator Analysis. Building data and zones on the left. Current zone values in the middle. Current zone calculations on the right">
@@ -70,7 +69,7 @@
         </section>
         <section id="skills_certs">
             <div class="skills">                
-                <h4>Skills</h4>                    
+                <h4>Skills</h4>
                 <div class="logo_containers">
                     <div class="logo_box cplusplus">
                         <img src="./images/c++.png" alt="c++">
